# zap-model

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
envs/: environment.linux.yaml  environment.mac.yaml
scripts/: build_cell_ephys_index.py  download_neuprint.py  train_eed.py  verify_fishfuncem.py  verify_setup.py
src/zap_model/: env.py  env_test.py  local_paths.example.py  local_paths_test.py
src/zap_model/data/: activity.py  conditions.py  config.py  config_test.py  em.py  ephys.py  functional.py  zarr.py
src/zap_model/models/eed/: config.py  data.py  model.py  model_test.py
src/zap_model/nn/: mlp.py
src/zap_model/training/: loss.py  paths.py  test_util.py  trainer.py  util.py
