[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zap-model"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    # fishfuncem via GitHub
    # Currently specifies py >= 3.11 <3.12 and strict version ranges for numpy
    # like numpy < 2. We will pull in manually with `--no-deps` for now, since
    # it should be fine for what we are going to be using from the repo.
    # "fishfuncem @ git+https://github.com/ahrens-fish-lab/fishFuncEM.git",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "PLE",  # pylint errors
    "PLW",  # pylint warnings
]
